--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
         <div class="col-sm-7 col-xs-12">
           <div class="thumbnail">
-            <img src="castlePic.JPG" class="thumb-pic">
+            <img src="castlePic.jpg" class="thumb-pic">
           </div>
         </div>
 
