Reorganized the repo's files and added in more information to the readme file
- Moved all images to a separate images folder to improve organization
of the repository
- Edited the CSS and pathing of all elements that displayed the images
to reflect the new location of all the images
- Added a line into the readme file about which pages are actually
viewable on the project

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
         <div class="col-sm-7 col-xs-12">
           <div class="thumbnail">
-            <img src="castlePic.jpg" class="thumb-pic">
+            <img src="images/castlePic.jpg" class="thumb-pic">
           </div>
         </div>
 
@@ -75,7 +75,7 @@
 
         <div class="col-sm-7 col-xs-12">
           <div class="thumbnail">
-            <img src="cuevasPic.JPG" class="thumb-pic">
+            <img src="images/cuevasPic.JPG" class="thumb-pic">
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
 
         <div class="col-sm-7 col-xs-12">
           <div class="thumbnail">
-            <img src="sollerPic.JPG" class="thumb-pic">
+            <img src="images/sollerPic.JPG" class="thumb-pic">
           </div>
         </div>
 
